Forgot to match new constructor for animations